--- a/main.css
+++ b/main.css
@@ -28,3 +28,9 @@
   margin-top:10px;
   font-size: 20px
 }
+#average{
+  position: absolute;
+  top:5px;
+  left:675px;
+  font-family: 'Montserrat'
+}
