Adding to both Git and Heroku

--- a/main.css
+++ b/main.css
@@ -48,3 +48,13 @@
   left: 40%;
   top: 350px;
 }
+#missedTitle{
+  position: absolute;
+  top:5px;
+  left:30%;
+}
+#boxesTitle{
+  position: absolute;
+  top:5px;
+  left:15%;
+}
