--- a/main.css
+++ b/main.css
@@ -1,178 +1,263 @@
-* {
-    box-sizing: border-box;
+*
+{
+	box-sizing:border-box;
 }
-#titleslot{
-  position: absolute;
-  left:10px;
-  top:5px;
-  font-family: 'Montserrat';
-  font-size:40px;
+
+#titleslot
+{
+	color:#FF7B21;
+	font-family:Montserrat;
+	font-size:40px;
+	left:42%;
+	position:absolute;
+	top:70px;
 }
-#box{
-  height: 100px;
-  width: 100px;
-  background-color: red;
-  position: absolute;
-  top:70px;
-  left:50px;
+
+#box
+{
+	background-color:red;
+	height:100px;
+	left:50px;
+	position:absolute;
+	top:70px;
+	width:100px;
 }
-#playzone{
-  height:750px;
-  width:80%;
-  border-style: solid;
-  border-color: red;
-  border-width: 4px;
-  position: absolute;
-  top:55px;
+
+#playzone
+{
+	border-color:red;
+	border-style:solid;
+	border-width:4px;
+	height:750px;
+	position:absolute;
+	top:55px;
+	width:80%;
 }
-#scores{
-  position: absolute;
-  right: 20px;
-  font-size: 20px;
-  font-family: 'Montserrat';
+
+#scores
+{
+	font-family:Montserrat;
+	font-size:20px;
+	position:absolute;
+	right:20px;
 }
-#scoor{
-  font-family: 'Raleway';
-  margin-left:80%;
-  margin-top:10px;
-  font-size: 20px
+
+#scoor
+{
+	font-family:Raleway;
+	font-size:20px;
+	margin-left:80%;
+	margin-top:10px;
 }
-#average{
-  position: absolute;
-  left:40%;
-  font-family: 'Montserrat';
+
+#average
+{
+	font-family:Montserrat;
+	left:40%;
+	position:absolute;
 }
-.startscr{
-  font-family: 'Montserrat';
+
+.startscr
+{
+	font-family:Montserrat;
 }
-#startscph{
-  position: absolute;
-  left:10%;
-  top:10%;
-  font-size:1.75em;
-  margin-right:30px;
-  font-size:30px;
+
+#startscph
+{
+	font-size:30px;
+	left:10%;
+	margin-right:30px;
+	position:absolute;
+	top:30%;
 }
-#startbut{
-  position: absolute;
-  left: 30%;
-  top: 36%;
+
+#startbut
+{
+	font-size:30px;
+	left:70%;
+	position:absolute;
+	top:70%;
 }
-#missedTitle{
-  position: absolute;
-  left:22%;
+
+#missedTitle
+{
+	left:22%;
+	position:absolute;
 }
-#boxesTitle{
-  position: absolute;
-  left:10%;
+
+#boxesTitle
+{
+	left:10%;
+	position:absolute;
 }
-#yeet{
-  position: absolute;
-  left:47%;
+
+#yeet
+{
+	left:47%;
+	position:absolute;
 }
-#stopper{
-  position: absolute;
-  left:55%;
+
+#stopper
+{
+	left:55%;
+	position:absolute;
 }
-#starter{
-  display: none;
-  position: absolute;
-  left:55%;
+
+#starter
+{
+	display:none;
+	left:55%;
+	position:absolute;
 }
-.startstuff{
-  position: absolute;
-  font-size:20px;
-  top:5px;
+
+.startstuff
+{
+	font-size:20px;
+	position:absolute;
+	top:5px;
 }
-#difficulty{
-  display: none;
+
+#difficulty
+{
+	display:none;
 }
-#blockAmount{
-  display: none;
+
+#blockAmount
+{
+	display:none;
 }
-#finalStat{
-  display: none;
+
+#finalStat
+{
+	display:none;
 }
-#game{
-  display: none;
+
+#game
+{
+	display:none;
 }
-#easy{
-  position: absolute;
-  left: 37%;
-  top:200px;
-  font-size: 30px;
+
+#easy
+{
+	font-size:30px;
+	left:37%;
+	position:absolute;
+	top:200px;
 }
-#medium{
-  position: absolute;
-  left: 37%;
-  top:300px;
-  font-size: 30px;
+
+#medium
+{
+	font-size:30px;
+	left:37%;
+	position:absolute;
+	top:300px;
 }
-#hard{
-  position: absolute;
-  left: 37%;
-  top:400px;
-  font-size: 30px;
+
+#hard
+{
+	font-size:30px;
+	left:37%;
+	position:absolute;
+	top:400px;
 }
-#difTitle{
-  position: absolute;
-  left:50px;
+
+#difTitle
+{
+	left:50px;
+	position:absolute;
 }
-#howman{
-  position: absolute;
-  left: 25%;
+
+#howman
+{
+	left:25%;
+	position:absolute;
 }
-#twenty{
-  position: absolute;
-  left: 45%;
-  top:200px;
-  font-size: 30px;
+
+#twenty
+{
+	font-size:30px;
+	left:45%;
+	position:absolute;
+	top:200px;
 }
-#thirty{
-  position: absolute;
-  left: 45%;
-  top:300px;
-  font-size: 30px;
+
+#thirty
+{
+	font-size:30px;
+	left:45%;
+	position:absolute;
+	top:300px;
 }
-#fifty{
-  position: absolute;
-  left: 45%;
-  top:400px;
-  font-size: 30px;
+
+#fifty
+{
+	font-size:30px;
+	left:45%;
+	position:absolute;
+	top:400px;
 }
-#youavg{
-  position: absolute;
-  left: 30%;
-  top:100px;
-  font-size: 30px;
+
+#youavg
+{
+	font-size:30px;
+	left:30%;
+	position:absolute;
+	top:100px;
 }
-#youhit{
-  position: absolute;
-  left: 30%;
-  top:200px;
-  font-size: 30px;
+
+#youhit
+{
+	font-size:30px;
+	left:30%;
+	position:absolute;
+	top:200px;
 }
-#youscore{
-  position: absolute;
-  left: 30%;
-  top:300px;
-  font-size: 30px;
+
+#youscore
+{
+	font-size:30px;
+	left:30%;
+	position:absolute;
+	top:300px;
 }
-#playAgain{
-  position: absolute;
-  left: 30%;
-  top:400px;
-  font-size: 30px;
+
+#playAgain
+{
+	font-size:30px;
+	left:30%;
+	position:absolute;
+	top:400px;
 }
-#toolti{
-  position: absolute;
-  top:300px;
-  left:40%;
+
+#toolti
+{
+	left:40%;
+	position:absolute;
+	top:300px;
 }
-#survey{
-  position: absolute;
-  left:20%;
-  top:450px;
-  font-size:30px;
-  text-decoration: none;
+
+#survey
+{
+	font-size:30px;
+	left:20%;
+	position:absolute;
+	text-decoration:none;
+	top:450px;
+}
+
+#title
+{
+	height:150px;
+	width:100%;
+  margin-bottom: 20px;
+}
+
+.customHr
+{
+	background-color:#ff7f32;
+	color:#967f32;
+	font-size:10px;
+	line-height:10px;
+	margin-top:-6px;
+	width:100%;
 }
