--- a/css/main.css
+++ b/css/main.css
@@ -289,9 +289,10 @@
 {
 	background-color:#ff7f32;
 	color:#967f32;
+	position: absolute;
 	font-size:10px;
 	line-height:10px;
-	margin-top:-6px;
+	top:25%;
 	width:100%;
 }
 #circle{
