--- a/views/index.jade
+++ b/views/index.jade
@@ -29,14 +29,14 @@ html(ng-app='uReact')
     button#starter.startstuff.btn.btn-warning  Push To Play Music.
     .ul.nav.navbar-nav.navbar-right
       if user  
-        li
-          a(href='/users/logout') Logout
+        li#logout
+          a(href='/users/logout')#fdout Logout
     #startme
       iframe#repoid(src='https://ghbtns.com/github-btn.html?user=ddxtanx&repo=react-me&type=star&count=true&size=large', frameborder='0', scrolling='0', width='160px', height='30px')
       iframe#userid(src='https://ghbtns.com/github-btn.html?user=ddxtanx&type=follow&count=true&size=large', frameborder='0', scrolling='0', width='220px', height='30px')
       #title
         h3#titleslot
-          | U React! Welcome #{username}
+          | U React! Welcome #{user.username}.
           h3
       .customHr .
       p#startscph.startscr
@@ -121,8 +121,8 @@ html(ng-app='uReact')
       a2a_config.color_link_text_hover = "333333";
     script(async='', src='https://static.addtoany.com/menu/page.js')
     // AddToAny END
-    script(src='../js/script.js')
-    script(src='../js/fastclick.js')
+    script(src='/js/script.js')
+    script(src='/js/fastclick.js')
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
